# phi

./: README.md  fp-llvm.cabal  output  phi.cabal  sandbox.md
examples/: count.phi  fib  fib.hs  fib.ll  fib.ml
scrap/: fib  fib.ll  sandbox.md
src/: Core.hs  Main.hs  Phi.hs  Util.hs
