cabal-version: 1.12

name:           phi
version:        0.1.0.0
build-type:     Simple

executable phi-exe
  main-is: Main.hs
  other-modules:
      Phi, Util
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      containers, mtl, sbv, recursion-schemes, deriving-compat,
      transformers, dlist, megaparsec, process, HList, lens, semilattices
  default-language: Haskell2010
  default-extensions:
      LambdaCase, DeriveFunctor, DeriveFoldable, DeriveTraversable,
      PatternSynonyms, EmptyCase, ViewPatterns, ScopedTypeVariables,
      TypeOperators, GeneralizedNewtypeDeriving, TemplateHaskell, TypeFamilies,
      FlexibleContexts, TupleSections, OverloadedStrings,
      TypeSynonymInstances, FlexibleInstances, StandaloneDeriving,
      MultiParamTypeClasses, FunctionalDependencies, DataKinds, GADTs, PolyKinds,
      PartialTypeSignatures, NoMonomorphismRestriction, CPP, NamedFieldPuns
